přidání top 4 leaderboard

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,13 @@
             <div id="gameControlAgain">
                 Znovu
             </div>
-            <p id="gameLeaderboardTop">👑 Aktuální nejlepší klikač 👑</p>
-            <div id="gameLeaderboard">Data se načtou až odehraješ první kolo<br /><br /></div>
+            <p id="gameLeaderboardTop">👑 Aktuální nejlepší klikači 👑</p>
+            <div id="gameLeaderboard"><span id="gameLeaderboardHide">Data se načtou až odehraješ kolo</span>
+                <div id="gameLeaderboard0"></div>
+                <div id="gameLeaderboard1"></div>
+                <div id="gameLeaderboard2"></div>
+                <div id="gameLeaderboard3"></div>
+            </div>
         </div>
     </div>
 <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
